Prevent the bubbles chart to zoom out when the user clicks on a text inside of a bubble. Uses the CSS 'pointer-events' property, that doesn't work on IE < 11 (1% traffic of the MIP)
This also fixes the problem where labels did not appear when hovering a text inside a bubble.

--- a/app/styles/less/models.less
+++ b/app/styles/less/models.less
@@ -22,6 +22,7 @@
   .circle-label {
     font: 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-anchor: middle;
+    pointer-events: none;
     text-shadow: 0 2px 0 #fff, 2px 0 0 #fff, -2px 0 0 #fff, 0 -2px 0 #fff;
 
     &.group {
